# tree-crasher

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  contributing.html  dev.html  index.html  install.html  lun.toml  overview.html  print.html  rustc-flags  searchindex.js  searchindex.json  tmp.sh  usage.html
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  doc.yml  lint.yml  release.yml
crates/tree-crasher/: Cargo.toml
crates/tree-crasher-c/: Cargo.toml
crates/tree-crasher-c/src/: main.rs
crates/tree-crasher-css/: Cargo.toml
crates/tree-crasher-css/src/: main.rs
crates/tree-crasher-html/: Cargo.toml
crates/tree-crasher-html/src/: main.rs
crates/tree-crasher-javascript/: Cargo.toml
crates/tree-crasher-javascript/src/: main.rs
crates/tree-crasher-nix/: Cargo.toml
crates/tree-crasher-nix/src/: main.rs
crates/tree-crasher-openscad/: Cargo.toml
crates/tree-crasher-openscad/src/: main.rs
crates/tree-crasher-python/: Cargo.toml
crates/tree-crasher-python/src/: main.rs
crates/tree-crasher-regex/: Cargo.toml
crates/tree-crasher-regex/src/: main.rs
crates/tree-crasher-ruby/: Cargo.toml
crates/tree-crasher-ruby/src/: main.rs
crates/tree-crasher-rust/: Cargo.toml
crates/tree-crasher-rust/src/: main.rs
crates/tree-crasher-solidity/: Cargo.toml
crates/tree-crasher-solidity/src/: main.rs
crates/tree-crasher-sql/: Cargo.toml
crates/tree-crasher-sql/src/: main.rs
crates/tree-crasher-typescript/: Cargo.toml
crates/tree-crasher-typescript/src/: main.rs
crates/tree-crasher/src/: lib.rs
dev/: dev.html  lint.html
doc/: README.md  SUMMARY.md  book.toml  contributing.md  dev.md  install.md  overview.md  usage.md
doc/dev/: dev.md  lint.md
scripts/corpora/: c.sh  css.sh  js.sh  python.sh  ruby.sh  sol.sh  sql.sh  ts.sh
scripts/lint/: lint.py  py.py  rumdl.toml  whitespace.py  xref.py
targets/: biome-css.dockerfile  biome-js.dockerfile  biome-ts.dockerfile  boa.dockerfile  clang.dockerfile  oxc-js.dockerfile  oxc-ts.dockerfile  ty.dockerfile
