[workspace] 
members = [
    "crates/tree-crasher",
    "crates/tree-crasher-c",
    "crates/tree-crasher-css",
    "crates/tree-crasher-html",
    "crates/tree-crasher-javascript",
    "crates/tree-crasher-regex",
    "crates/tree-crasher-ruby",
    "crates/tree-crasher-rust",
    "crates/tree-crasher-sql",
    "crates/tree-crasher-typescript",
]

# https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
lto = true