[workspace]
members = [
  "crates/tree-crasher",
  "crates/tree-crasher-c",
  "crates/tree-crasher-css",
  "crates/tree-crasher-html",
  "crates/tree-crasher-javascript",
  "crates/tree-crasher-nix",
  "crates/tree-crasher-python",
  "crates/tree-crasher-regex",
  "crates/tree-crasher-ruby",
  "crates/tree-crasher-rust",
  "crates/tree-crasher-sql",
  "crates/tree-crasher-typescript",
  "crates/tree-crasher-solidity",
]

[workspace.package]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
edition = "2024"
homepage = "https://github.com/langston-barrett/tree-crasher"
repository = "https://github.com/langston-barrett/tree-crasher"

[workspace.dependencies]
tree-crasher = { version = "0.5.0", path = "./crates/tree-crasher" }

# https://github.com/mstange/samply#turn-on-debug-info-for-full-stacks
[profile.profiling]
inherits = "release"
debug = true

# https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
lto = true

[workspace.lints.clippy]
# pedantic = { level = "warn", priority = -1 }
case_sensitive_file_extension_comparisons = "allow"
dbg_macro = "warn"
explicit_iter_loop = "warn"
format_push_string = "warn"
ignore_without_reason = "warn"
implicit_clone = "warn"
implicit_hasher = "allow"
inefficient_to_string = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
needless_borrow = "warn"
needless_pass_by_value = "allow"
needless_raw_string_hashes = "allow"
redundant_else = "warn"
return_self_not_must_use = "warn"
semicolon_if_nothing_returned = "warn"
todo = "warn"
too_many_lines = "allow"
trivially_copy_pass_by_ref = "warn"
unimplemented = "warn"
uninlined_format_args = "warn"
unreadable_literal = "warn"
use_debug = "warn"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
dead_code = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
keyword_idents_2018 = "warn"
keyword_idents_2024 = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_debug_implementations = "warn"
missing_unsafe_on_extern = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unstable_features = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
