[package]
name = "tree-crasher-nix"
version = "0.1.0"
edition = "2021"
description = "Easy-to-use grammar-based black-box fuzzer"
keywords = ["black-box", "fuzzer", "grammar-based"]
authors = ["William Woodruff <william@yossarian.net>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/tree-crasher"
repository = "https://github.com/langston-barrett/tree-crasher"

[dependencies]
anyhow = "1"
tree-crasher = { version = "0.4.0", path = "../tree-crasher" }
tree-sitter-nix = "0.0.1"
