[package]
name = "tree-crasher-regex"
version = "0.5.0"
description = "Easy-to-use grammar-based black-box fuzzer"
keywords = ["black-box", "fuzzer", "grammar-based"]
readme = "../../README.md"

authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
tree-crasher = { workspace = true }
tree-sitter-regex = "0.25.0"
