[package]
name = "tree-crasher-solidity"
version = "0.4.0"
edition = "2021"
description = "Easy-to-use grammar-based black-box fuzzer"
keywords = ["black-box", "fuzzer", "grammar-based"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/tree-crasher"
repository = "https://github.com/langston-barrett/tree-crasher"

[dependencies]
anyhow = "1"
tree-crasher = { version = "0.4.0", path = "../tree-crasher" }
tree-sitter-solidity = { git = "https://github.com/0xalpharush/tree-sitter-solidity", rev = "3e26757" }
