[package]
name = "tree-crasher-sql"
version = "0.1.1"
edition = "2021"
description = "Easy-to-use grammar-based black-box fuzzer"
keywords = ["black-box", "fuzzer", "grammar-based"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/tree-crasher"
repository = "https://github.com/langston-barrett/tree-crasher"

[dependencies]
anyhow = "1"
tree-crasher = { version = "0.1.1", path = "../tree-crasher" }
tree-sitter-sql = { git = "https://github.com/langston-barrett/tree-sitter-sql" }