[package]
name = "tree-crasher"
version = "0.4.0"
edition = "2021"
description = "Easy-to-use grammar-based black-box fuzzer"
keywords = ["black-box", "fuzzer", "grammar-based"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/tree-crasher"
repository = "https://github.com/langston-barrett/tree-crasher"

[lints]
workspace = true

[dependencies]
anyhow = { version = "1", optional = false }
clap-verbosity-flag = { version = "3", optional = false }
clap = { version = "4", features = ["derive"], optional = false }
nu-ansi-term = { version = "0.50", optional = false }
num_cpus = { version = "1", optional = false }
rand = "0.9.2"
regex = "1"
treereduce = "0.3.1"
tree-sitter = "0.20"
tree-splicer = "0.5"
radamsa-sys = { version = "0.1", optional = true }

[features]
default = []
radamsa = ["dep:radamsa-sys"]
