[package]
name = "tree-crasher"
version = "0.5.0"
description = "Easy-to-use grammar-based black-box fuzzer"
keywords = ["black-box", "fuzzer", "grammar-based"]
readme = "../../README.md"

authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { version = "1", optional = false }
clap-verbosity-flag = { version = "3", optional = false }
clap = { version = "4", features = ["derive"], optional = false }
nu-ansi-term = { version = "0.50", optional = false }
num_cpus = { version = "1", optional = false }
rand = "0.9.2"
regex = "1"
treereduce = "0.4.0"
tree-sitter = "0.25.10"
tree-splicer = "0.7.0"
radamsa-sys = { version = "0.1", optional = true }

[features]
default = []
radamsa = ["dep:radamsa-sys"]
